// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/forms/PasswordStrengthMeter Bon 1`] = `
<section>
  <div
    className="w-full bg-gray-200 rounded-full h-2.5"
  >
    <div
      className="bg-yellow-300 h-2.5 rounded-full"
      style={
        Object {
          "width": "75%",
        }
      }
    />
  </div>
  <label
    className="text-gray-500 block text-sm"
  >
    Bon
  </label>
</section>
`;

exports[`Storyshots ui/forms/PasswordStrengthMeter Faible 1`] = `
<section>
  <div
    className="w-full bg-gray-200 rounded-full h-2.5"
  >
    <div
      className="bg-red-500 h-2.5 rounded-full"
      style={
        Object {
          "width": "25%",
        }
      }
    />
  </div>
  <label
    className="text-red-500 block text-sm"
  >
    Faible
  </label>
  <label>
    Les lignes droites de touches de votre clavier sont faciles à deviner
  </label>
  <ul
    className="mt-2 ml-4 text-sm list-disc"
  >
    <li>
      Évitez les séquences de caractères courantes.
    </li>
    <li>
      Évitez les substitutions de lettres prévisibles comme '@' pour 'a'.
    </li>
  </ul>
</section>
`;

exports[`Storyshots ui/forms/PasswordStrengthMeter Nul 1`] = `
<section>
  <div
    className="w-full bg-gray-200 rounded-full h-2.5"
  >
    <div
      className="bg-red-500 h-2.5 rounded-full"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <label
    className="text-red-500 block text-sm"
  >
    
  </label>
  <label>
    Les lignes droites de touches de votre clavier sont faciles à deviner
  </label>
  <ul
    className="mt-2 ml-4 text-sm list-disc"
  >
    <li>
      Évitez les séquences de caractères courantes.
    </li>
    <li>
      Évitez les substitutions de lettres prévisibles comme '@' pour 'a'.
    </li>
  </ul>
</section>
`;

exports[`Storyshots ui/forms/PasswordStrengthMeter Passable 1`] = `
<section>
  <div
    className="w-full bg-gray-200 rounded-full h-2.5"
  >
    <div
      className="bg-yellow-500 h-2.5 rounded-full"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
  <label
    className="text-yellow-500 block text-sm"
  >
    Passable
  </label>
  <label>
    Les lignes droites de touches de votre clavier sont faciles à deviner
  </label>
  <ul
    className="mt-2 ml-4 text-sm list-disc"
  >
    <li>
      Évitez les séquences de caractères courantes.
    </li>
    <li>
      Évitez les substitutions de lettres prévisibles comme '@' pour 'a'.
    </li>
  </ul>
</section>
`;

exports[`Storyshots ui/forms/PasswordStrengthMeter Robuste 1`] = `
<section>
  <div
    className="w-full bg-gray-200 rounded-full h-2.5"
  >
    <div
      className="bg-green-500 h-2.5 rounded-full"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <label
    className="text-green-500 block text-sm"
  >
    Robuste
  </label>
</section>
`;
